--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
 body {
   margin: 0;
   font-family: 'Tajawal', sans-serif;
-  box-sizing: border-box;
+  display:flex; 
+  flex-direction:column;
 }
 
  /*menu*/
@@ -50,8 +51,7 @@ body {
 /*big title*/
 .title{
   font-size: 36px;
-  text-align: center;
-  
+  text-align: center; 
 }
 
 /*logo*/
@@ -63,14 +63,11 @@ img{
   padding-bottom: 30px;
 }
 
-
 /*footer*/
 .footer{
   padding: 26px;
   background-color: #333;
-  bottom: 0;
-  left: 0;
-  position: relative;
+  margin-top:auto; 
   text-align: center;
 }
 
